Add the main parts of the page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="title"></div>
+        <div class="description"></div>
+    </header>
+    <div class="content">
+        <h2></h2>
+    </div>
+    <div class="message"></div>
+    <div class="sign-up"></div>
+    <footer class="footer"></footer>
 </body>
 </html>
