--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header class="header">
-        <div class="title"></div>
-        <div class="description"></div>
+    <header>
+        <div class="top-bar">
+            <img src="" alt="" class="logo">
+            <ul class="navegation-bar">
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <div class="header">
+            <div class="header-content">
+                <h1 class="title"></h1>
+                <p></p>
+                <button type="button"></button>
+            </div>
+            <img src="" alt="">
+        </div>
     </header>
     <div class="content">
         <h2></h2>
