--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     </header>
     <div class="content">
         <h2></h2>
+        <div class="information">
+            <div class="info1"></div>
+            <div class="info2"></div>
+            <div class="info3"></div>
+            <div class="info4"></div>
+        </div>
     </div>
     <div class="message"></div>
     <div class="sign-up"></div>
