--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <div class="info4"></div>
         </div>
     </div>
-    <div class="message"></div>
+    <div class="message">
+        <p class="text"></p>
+        <p class="author"></p>
+    </div>
     <div class="sign-up"></div>
     <footer class="footer"></footer>
 </body>
