Fill the two last divs

--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
             <div class="info4"></div>
         </div>
     </div>
-    <div class="message">
-        <p class="text"></p>
+    <div class="quote">
+        <p class="message"></p>
         <p class="author"></p>
     </div>
-    <div class="sign-up"></div>
-    <footer class="footer"></footer>
+    <div class="sign-up">
+        <div class="text">
+            <h3></h3>
+            <p></p>
+        </div>
+        <button type="button2"></button>
+    </div>
+    <div class="footer">Copyright @ The Odin Project 2024</div>
 </body>
 </html>
