Add more elements and content in the div content

--- a/index.html
+++ b/index.html
@@ -25,12 +25,24 @@
         </div>
     </header>
     <div class="content">
-        <h2></h2>
+        <h2>Some random information.</h2>
         <div class="information">
-            <div class="info1"></div>
-            <div class="info2"></div>
-            <div class="info3"></div>
-            <div class="info4"></div>
+            <div class="info1">
+                <img src="https://pbs.twimg.com/media/EOh2ERtXkAIOfhh?format=jpg&name=small" alt="img1">
+                <figcaption>The biggest mistake you can make in life is thinking you have enough time. </figcaption>
+            </div>
+            <div class="info2">
+                <img src="https://scontent.fepa8-1.fna.fbcdn.net/v/t39.30808-6/410974358_377208664986545_4283415567178137977_n.jpg?stp=dst-jpg_p526x296&_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=r2_vjL9mp3MQ7kNvgGG4IAo&_nc_ht=scontent.fepa8-1.fna&oh=00_AYBJ3SnkBaylPwJ-lXQ5N1l1g95WH2mq1obA-mGdCllCPw&oe=66D16A41" alt="img2">
+                <figcaption>Listen to stand-up comedy when you’re getting ready in the morning. Starting the day off with laughter and smiles makes everyday just a little bit better.</figcaption>
+            </div>
+            <div class="info3">
+                <img src="https://w0.peakpx.com/wallpaper/124/979/HD-wallpaper-perro-calcetin-xdxd-calcetin-dog-perro-random-thumbnail.jpg" alt="img3">
+                <figcaption>Invest in those who invest in you. People who show up for you should be cherished.</figcaption>
+            </div>
+            <div class="info4">
+                <img src="https://stickerly.pstatic.net/sticker_pack/xO3zSKpBX8TqGJtXWsgzg/U9EZPN/16/f214f38e-78d2-4dd0-a861-d3622b11a56b.png" alt="img4">
+                <figcaption>Deploy patience more often. Good things happen, but they often take some time and momentum.</figcaption>
+            </div>
         </div>
     </div>
     <div class="quote">
