--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
     </div>
     <div class="quote">
-        <p class="message"></p>
-        <p class="author"></p>
+        <div class="message">“Stay away from those people who try to disparage your ambitions. Small minds will always do that, but great minds will give you a feeling that you can become great too.”</div>
+        <div class="author">—Mark Twain</div>
     </div>
     <div class="sign-up">
         <div class="text">
