--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-content">
                 <h1 class="title">This website is almost awesome</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, ex ea! Velit saepe, quam vitae minus aspernatur excepturi pariatur, minima nulla nobis qui officia!</p>
-                <button type="button">Sing Up</button>
+                <button type="button">Sing up</button>
             </div>
             <img src="https://pbs.twimg.com/media/GBXXyhqXYAEYuny?format=png&name=small" alt="perro-dinero">
         </div>
@@ -51,10 +51,10 @@
     </div>
     <div class="sign-up">
         <div class="text">
-            <h3></h3>
-            <p></p>
+            <h3>Call to action! Its time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button type="button2"></button>
+        <button type="button2">Sign up</button>
     </div>
     <div class="footer">Copyright @ The Odin Project 2024</div>
 </body>
