Change the p and h elements for divs

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
         <div class="header">
             <div class="header-content">
-                <h1 class="title">This website is almost awesome</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, ex ea! Velit saepe, quam vitae minus aspernatur excepturi pariatur, minima nulla nobis qui officia!</p>
+                <div class="title">This website is almost awesome</div>
+                <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, ex ea! Velit saepe, quam vitae minus aspernatur excepturi pariatur, minima nulla nobis qui officia!</div>
                 <button type="button">Sing up</button>
             </div>
             <img src="https://pbs.twimg.com/media/GBXXyhqXYAEYuny?format=png&name=small" alt="perro-dinero">
         </div>
     </header>
     <div class="content">
-        <h2>Some random information.</h2>
+        <div>Some random information.</div>
         <div class="information">
             <div class="info1">
                 <img src="https://pbs.twimg.com/media/EOh2ERtXkAIOfhh?format=jpg&name=small" alt="img1">
