Create a new div called placeholder in the header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, ex ea! Velit saepe, quam vitae minus aspernatur excepturi pariatur, minima nulla nobis qui officia!</div>
                 <button type="button">Sing up</button>
             </div>
-            <img src="https://pbs.twimg.com/media/GBXXyhqXYAEYuny?format=png&name=small" alt="perro-dinero">
+            <div class="placeholder"><img src="https://pbs.twimg.com/media/GBXXyhqXYAEYuny?format=png&name=small" alt="perro-dinero"></div>
         </div>
     </header>
     <div class="content">
