Put a class name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <div class="content">
-        <div>Some random information.</div>
+        <div class="information-header">Some random information.</div>
         <div class="information">
             <div class="info1">
                 <img src="https://pbs.twimg.com/media/EOh2ERtXkAIOfhh?format=jpg&name=small" alt="img1">
