--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>Call to action! Its time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button type="button2">Sign up</button>
+        <button type="button">Sign up</button>
     </div>
     <div class="footer">Copyright @ The Odin Project 2024</div>
 </body>
